// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Page Empty form should render the component 1`] = `
<div
  class="container"
>
  <b-form-stub>
    <b-row-stub
      tag="div"
    >
      <b-col-stub
        tag="div"
      >
        Username
      </b-col-stub>
       
      <b-col-stub
        tag="div"
      >
        <b-form-input-stub
          debounce="0"
          type="text"
          value=""
        />
      </b-col-stub>
    </b-row-stub>
     
    <b-row-stub
      tag="div"
    >
      <b-col-stub
        tag="div"
      >
        Password
      </b-col-stub>
       
      <b-col-stub
        tag="div"
      >
        <b-form-input-stub
          debounce="0"
          type="password"
          value=""
        />
      </b-col-stub>
    </b-row-stub>
     
    <b-row-stub
      tag="div"
    >
      <b-col-stub
        tag="div"
      >
        <b-button-stub
          block="true"
          disabled="true"
          tag="button"
          target="_self"
          type="button"
          variant="primary"
        >
          Login
        </b-button-stub>
      </b-col-stub>
    </b-row-stub>
  </b-form-stub>
</div>
`;

exports[`Login Page Filled form should render the component 1`] = `
<div
  class="container"
>
  <b-form-stub>
    <b-row-stub
      tag="div"
    >
      <b-col-stub
        tag="div"
      >
        Username
      </b-col-stub>
       
      <b-col-stub
        tag="div"
      >
        <b-form-input-stub
          debounce="0"
          type="text"
          value="asas"
        />
      </b-col-stub>
    </b-row-stub>
     
    <b-row-stub
      tag="div"
    >
      <b-col-stub
        tag="div"
      >
        Password
      </b-col-stub>
       
      <b-col-stub
        tag="div"
      >
        <b-form-input-stub
          debounce="0"
          type="password"
          value="12345"
        />
      </b-col-stub>
    </b-row-stub>
     
    <b-row-stub
      tag="div"
    >
      <b-col-stub
        tag="div"
      >
        <b-button-stub
          block="true"
          tag="button"
          target="_self"
          type="button"
          variant="primary"
        >
          Login
        </b-button-stub>
      </b-col-stub>
    </b-row-stub>
  </b-form-stub>
</div>
`;
